// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly applies the theme context className 1`] = `
<section
  aria-labelledby={null}
  className="detail-view orion-fusion-theme"
>
  <hr
    className="divider"
  />
  <ContextProvider
    value={2}
  />
</section>
`;

exports[`should render a default component 1`] = `
<section
  class="detail-view"
>
  <hr
    class="divider"
  />
</section>
`;

exports[`should render a smaller title 1`] = `
<section
  aria-labelledby="title-id-00000000-0000-0000-0000-000000000000"
  class="detail-view"
>
  <div
    class="titles-section titles-smaller"
  >
    <h2
      class="primary-text"
      id="title-id-00000000-0000-0000-0000-000000000000"
    >
      Header
    </h2>
  </div>
  <hr
    class="divider"
  />
</section>
`;

exports[`should render a title 1`] = `
<section
  aria-labelledby="title-id-00000000-0000-0000-0000-000000000000"
  class="detail-view"
>
  <div
    class="titles-section"
  >
    <h2
      class="primary-text"
      id="title-id-00000000-0000-0000-0000-000000000000"
    >
      Header
    </h2>
  </div>
  <hr
    class="divider"
  />
</section>
`;

exports[`should render accessory 1`] = `
<section
  aria-labelledby="title-id-00000000-0000-0000-0000-000000000000"
  class="detail-view"
>
  <div
    class="titles-section"
  >
    <h2
      class="primary-text"
      id="title-id-00000000-0000-0000-0000-000000000000"
    >
      Header
    </h2>
    <div
      class="accessory"
    >
      <div>
         This is where an accessory would go 
      </div>
    </div>
  </div>
  <hr
    class="divider"
  />
</section>
`;

exports[`should render details 1`] = `
<section
  aria-labelledby="title-id-00000000-0000-0000-0000-000000000000"
  class="detail-view"
>
  <div
    class="titles-section"
  >
    <h2
      class="primary-text"
      id="title-id-00000000-0000-0000-0000-000000000000"
    >
      Header
    </h2>
    <p
      class="subtitle"
    >
      Subtitle 1
    </p>
    <p
      class="subtitle"
    >
      Subtitle 2
    </p>
  </div>
  <hr
    class="divider"
  />
  <p>
     Detail information 
  </p>
  <hr
    class="divider"
  />
</section>
`;

exports[`should render footer 1`] = `
<section
  aria-labelledby="title-id-00000000-0000-0000-0000-000000000000"
  class="detail-view"
>
  <div
    class="titles-section"
  >
    <h2
      class="primary-text"
      id="title-id-00000000-0000-0000-0000-000000000000"
    >
      Header
    </h2>
    <p
      class="subtitle"
    >
      Subtitle 1
    </p>
    <p
      class="subtitle"
    >
      Subtitle 2
    </p>
  </div>
  <hr
    class="divider"
  />
  <p>
     Detail information 
  </p>
  <hr
    class="divider"
  />
  <p
    class="footer-text"
    role="note"
  >
    Footer text
  </p>
</section>
`;

exports[`should render graph 1`] = `
<section
  aria-labelledby="title-id-00000000-0000-0000-0000-000000000000"
  class="detail-view"
>
  <div
    class="titles-section"
  >
    <h2
      class="primary-text"
      id="title-id-00000000-0000-0000-0000-000000000000"
    >
      Header
    </h2>
    <p
      class="subtitle"
    >
      Subtitle 1
    </p>
    <p
      class="subtitle"
    >
      Subtitle 2
    </p>
  </div>
  <hr
    class="divider"
  />
  <figure
    class="graph-figure"
  >
    <div>
       This is where a graph would go 
    </div>
  </figure>
  <hr
    class="divider"
  />
</section>
`;

exports[`should render secondaryTitles 1`] = `
<section
  aria-labelledby="title-id-00000000-0000-0000-0000-000000000000"
  class="detail-view"
>
  <div
    class="titles-section"
  >
    <h2
      class="primary-text"
      id="title-id-00000000-0000-0000-0000-000000000000"
    >
      Header
    </h2>
    <h3
      class="secondary-text"
    >
      SecondaryTitle1
    </h3>
    <h3
      class="secondary-text"
    >
      SecondaryTitle2
    </h3>
  </div>
  <hr
    class="divider"
  />
</section>
`;

exports[`should render subtitles 1`] = `
<section
  aria-labelledby="title-id-00000000-0000-0000-0000-000000000000"
  class="detail-view"
>
  <div
    class="titles-section"
  >
    <h2
      class="primary-text"
      id="title-id-00000000-0000-0000-0000-000000000000"
    >
      Header
    </h2>
    <p
      class="subtitle"
    >
      Subtitle 1
    </p>
    <p
      class="subtitle"
    >
      Subtitle 2
    </p>
  </div>
  <hr
    class="divider"
  />
</section>
`;

exports[`should render without a divider when indicated 1`] = `
<section
  aria-labelledby="title-id-00000000-0000-0000-0000-000000000000"
  class="detail-view"
>
  <div
    class="titles-section"
  >
    <h2
      class="primary-text"
      id="title-id-00000000-0000-0000-0000-000000000000"
    >
      Header
    </h2>
    <p
      class="subtitle"
    >
      Subtitle 1
    </p>
    <p
      class="subtitle"
    >
      Subtitle 2
    </p>
  </div>
  <p>
     Detail information 
  </p>
  <p
    class="footer-text"
    role="note"
  >
    Footer text
  </p>
</section>
`;
